--- a/week8/index.html
+++ b/week8/index.html
@@ -27,20 +27,6 @@
         </div>
 
         <div class="slide">
-            <h2>last time?</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/assignment-mar.png);">
-            <span style="background: white; float: right;">Mar</span>
-        </div>
-
-        <div class="slide" style="background-image: url(img/assignment-jason.png);">
-            <span style="background: white; float: right;">Daniel</span>
-        </div>
-
-        <div class="slide intermission"></div>
-
-        <div class="slide">
             <h2>let's talk about final projects</h2>
         </div>
 
@@ -65,33 +51,6 @@
 
         <div class="slide" style="background-image: url(img/refactor-1.png);">
             <h2>deleting fields</h2>
-        </div>
-
-        <div class="slide">
-            <h2>sometimes you need to do something more complex</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-2.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-3.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-4.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-5.png);">
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-5.png);">
-            <h2>double-click to rename</h2>
-        </div>
-
-        <div class="slide" style="background-image: url(img/refactor-6.png);">
-        </div>
-
-        <div class="slide">
-            <h2>refactoring always makes a new layer that you should save to a shapefile</h2>
         </div>
 
         <div class="slide">
@@ -139,7 +98,7 @@
 
         <div class="slide intermission"></div>
 
-        <div class="slide">
+       <!--  <div class="slide">
             <h2>geocoding</h2>
         </div>
 
@@ -323,7 +282,7 @@
 
         <div class="slide">
             <h2><a href="inclass-hexbins.html" target="_blank">in-class exercise</a></h2>
-        </div>
+        </div> -->
 
         <div class="slide intermission"></div>
 
@@ -397,20 +356,43 @@
             <h2>consider a rectangle with a gradient fill instead</h2>
         </div>
 
-        <div class="slide">
-            <h2>there are a variety of methods for giving values to pixels</h2>
+        <div class="slide" style="background-image: url(img/qgis-heatmap-4.png);">
+            <h2>Add Item - Rectangle and style the rectangle with gradient fill</h2>
         </div>
 
-        <div class="slide" style="background-image: url(img/kernels.png);">
+        <div class="slide" style="background-image: url(img/rect1.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/rect2.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/rect3.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/rect4.png);">
         </div>
 
         <div class="slide">
             <h2><a href="inclass-heatmaps.html" target="_blank">in-class exercise</a></h2>
         </div>
 
+        <div class="slide">
+            <h2>You can use QuickMaps basemaps as a background layer for your maps</h2>
+        </div>
+
+        <div class="slide" style="background-image: url(img/redistricting_bedstuy.png);">
+        </div>
+
+        <div class="slide" style="background-image: url(img/redistricting_crown_heights.png);">
+        </div>
+
         <div class="slide intermission"></div>
 
         <div class="slide">
+            <h2><a href="inclass-research-questions.html" target="_blank">in-class exercise</a></h2>
+        </div>
+
+        <!-- <div class="slide">
             <h2>modeling</h2>
         </div>
 
@@ -578,14 +560,14 @@
 
         <div class="slide">
             <h2>if you have <code>s_income</code>, <code>s_renters</code> and <code>s_airbnb</code>, you can add them together to get your model value (index)</h2>
-        </div>
+        </div> -->
 
-        <div class="slide" style="background-image: url(img/model-add.png);">
+        <!-- <div class="slide" style="background-image: url(img/model-add.png);">
         </div>
 
         <div class="slide">
             <h2><a href="inclass-modeling.html" target="_blank">in-class exercise</a></h2>
-        </div>
+        </div> -->
         <div class="slide intermission"></div>
 
         <div class="slide">
