--- a/week8/inclass-heatmaps.html
+++ b/week8/inclass-heatmaps.html
@@ -14,10 +14,15 @@
 
             <section>
                 <h2>Heatmaps</h2>
-                <p>Using the same points layer as last time, make a heatmap.</p>
+                <p>Using the Low Income Housing Tax Credit (LIHTC) Development points layer, add a heatmap of low-income rental properties created through the LIHTC program city of your choice.</p>
                 <ol>
-                    <li>Export the Airbnb Listings data with 2263 as the CRS.</li>
+                    <li>If you haven't already, download <a href="data/week8_folder.zip">today's data</a>.</li>
+                    <li>Add the Low Income Housing Tax Credit (LIHTC) csv to QGIS and map the points using longitude and latitude.</li>
+                    <li>Add the Borough Boundaries shapefile</li>
+                    <li>Use Select by Location to select the LIHTC buildings in New York City.</li>
+                    <li>Export the LIHTC Listings data with 2263 as the CRS.</li>
                     <li>Search for <strong>Heatmap (Kernel Density Estimation)</strong> in the QGIS search box.</li>
+                    <li>Weight the heat map based on the number of affordable units in the building, Weight from field = li_units_n</li>
                     <li>Set the radius to 2000 feet.</li>
                     <li>Set the rows to 3000. This is the number of rows of pixels in the resulting raster. The columns should update automatically.</li>
                     <li>Style the output raster with a <strong>Singleband Pseudocolor</strong> render type and select a color ramp.</li>
