--- a/week8/inclass-heatmaps.html
+++ b/week8/inclass-heatmaps.html
@@ -16,7 +16,7 @@
                 <h2>Heatmaps</h2>
                 <p>Using the Low Income Housing Tax Credit (LIHTC) Development points layer, add a heatmap of low-income rental properties created through the LIHTC program city of your choice.</p>
                 <ol>
-                    <li>If you haven't already, download <a href="data/week8_folder.zip">today's data</a>.</li>
+                    <li>If you haven't already, download <a href="week8_folder.zip">today's data</a>.</li>
                     <li>Add the Low Income Housing Tax Credit (LIHTC) csv to QGIS and map the points using longitude and latitude.</li>
                     <li>Add the Borough Boundaries shapefile</li>
                     <li>Use Select by Location to select the LIHTC buildings in New York City.</li>
