updating week 9 assignment to explain joins from class

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </section>
                     <section class="assignment">
                         <h4>
-                            <a href="week9/assignment.html">assignment</a>
+                            <a href="week9/inclass-nhgis.html">assignment</a>
                         </h4>
                     </section>
                     <section class="videos">
