--- a/week9/inclass-data-plotly.html
+++ b/week9/inclass-data-plotly.html
@@ -15,7 +15,7 @@
             <section>
                 <h2>Data Plotly</h2>
                 <ol>
-                    <li>Download <a href="data/week9data.zip">today's data</a>.</li>
+                    <li>Download <a href="week9/week9_folder.zip">today's data</a>.</li>
                     <li>Open your housing affordability map project QGIS.  If you haven't completed it, open my Georgia map and correct the data paths to your computer.</li>
                     <li>Install the <strong>Data Plotly</strong> plugin.</li>
                     <li>Open Data Plotly: <strong>Plugins &gt; Data Plotly &gt; Data Plotly</strong> plugin.</li>
