--- a/week9/inclass-geocoding.html
+++ b/week9/inclass-geocoding.html
@@ -17,7 +17,7 @@
                 <ol>
                     <li>For this exercise, we'll practive geocoding within QGIS with a small number of addresses.  Geocoding is a laborious process, and it takes a while no matter which service you use.</li>
                     <li>We will geocode an exerpt of the 40,329  applications for a license to sell tobacco in New York City since 1998.</li>
-                    <li>Download <a href="data/week9data.zip">today's data</a>.</li>
+                    <li>Download <a href="week9/week9_folder.zip">today's data</a>.</li>
                     <li>First you need to make sure there is an address column with building number and street in one field.</li>
                     <li>Open the tobacco_exerpt.csv and create a street address field from two columns: "Building Number" and "Street".  In excel you use the CONCATENATE function</li>
                     <li>Open QGIS and install the MMQGIS Plugin</li>
