updating week 9 assignment to explain joins from class

--- a/week9/inclass-nhgis.html
+++ b/week9/inclass-nhgis.html
@@ -14,7 +14,7 @@
 
             <section>
                 <h3>Join census data from NHGIS to affordability data, explore with Plotly, and map</h3>
-                <p>These are the updated intructions for downloading the appropriate data from NHGIS so that you can join it to the census shapefile. All of the data for this exercise, including the 2015-19 ACS data from NHGIS can be downloaded <a href="">here</a>.  If you want to download and process the data yourself, follow instructions below. Otherwise, proceed to Step 1.</p>
+                <p>These are the updated intructions for downloading the appropriate data from NHGIS so that you can join it to the census shapefile. All of the data for this exercise, including the 2015-19 ACS data from NHGIS can be downloaded <a href="week9/week9_folder.zip">here</a>.  If you want to download and process the data yourself, follow instructions below. Otherwise, proceed to Step 1.</p>
                 <ul>
                     <li>Go to <a href="https://data2.nhgis.org/">nhgis</a> and download race/ethnicity data for every census tract in the country using NHGIS.</li>
                     <li>Select Geographic Levels = census tract, Years = 2015-19, Topics = Race AND Hispanic Origin </li>
