--- a/index.html
+++ b/index.html
@@ -325,14 +325,13 @@
                     </section>
                     <section class="videos">
                         <h4>videos</h4>
-                        <li><a href="https://www.youtube.com/watch?v=VsIY7eGr7MI">QGIS: Geocoding</a></li>
                         <ul>
-                            
+                            <li><a href="https://www.youtube.com/watch?v=VsIY7eGr7MI">QGIS: Geocoding</a></li>
                         </ul>
                     </section>
                 </section>
 
-                <!-- <section>
+                <section>
                     <h3>Week 10: Using HTML and CSS in Carto</h3>
                     <section class="slides">
                         <h4>
@@ -359,6 +358,7 @@
                     </section>
                 </section>
 
+<!-- 
                 <section>
                     <h3>Week 11: Mapbox</h3>
                     <section class="slides">
