adding class 11 lecture

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     </section>
                 </section>
 
-<!-- 
+
                 <section>
                     <h3>Week 11: Mapbox</h3>
                     <section class="slides">
@@ -384,7 +384,7 @@
                     </section>
                 </section>
 
-                <section>
+                <!-- <section>
                     <h3>Week 12: Special Topics</h3>
                     <section class="slides">
                         <h4>
