--- a/week11/index.html
+++ b/week11/index.html
@@ -387,7 +387,7 @@
         </div>
 
         <div class="slide">
-            <h2><a href="inclass-mapox-data.html" target="_blank">in-class exercise</a></h2>
+            <h2><a href="inclass-mapbox-data.html" target="_blank">in-class exercise</a></h2>
         </div>
 
     </body>
