adding homework example

--- a/week11/index.html
+++ b/week11/index.html
@@ -25,9 +25,8 @@
             <h1>Methods 3</h1>
         </div>
 
-        <div class="slide" style="background-image: url(img/assignment-jason.png);">
-            <span style="background: white; float: right;">Jason</span>
-            <a href="https://thenewschool.carto.com/u/browj934/builder/05308abf-680a-4cee-8840-91ff600917db/embed" class="source">Carto map</a>
+        <div class="slide" style="background-image: url(img/tori.png);">
+            <span style="background: white; float: right;">Tori</span>
         </div>
 
         <div class="slide">
