--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@
                         <h4>
                             <a href="week11/">slides</a>
                         </h4>
+                        <h4>
+                            <a href="week11/data/week11data.zip">data</a>
+                        </h4>
                     </section>
                     <section class="lab">
                         <h4>in-class work:</h4>
@@ -373,6 +376,11 @@
                             <li><a href="week11/inclass-mapbox-carto.html">Mapbox in Carto</a></li>
                             <li><a href="week11/inclass-mapbox-data.html">Adding data to Mapbox</a></li>
                         </ol>
+                    </section>
+                     <section class="assignment">
+                        <h4>
+                            <a href="week11/assignment.html">assignment</a>
+                        </h4>
                     </section>
                     <section class="videos">
                         <h4>videos</h4>
