adding week 12 lesson and assignments

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <ol class="inclass-list">
                             <li><a href="week9/inclass-data-plotly.html">Plotly</a></li>
                             <li><a href="week9/inclass-nhgis.html">NHGIS</a></li>
-                            <li><a href="week9/inclass-geocoding.html">Geocoding</a></li>
+                            <!-- <li><a href="week9/inclass-geocoding.html">Geocoding</a></li> -->
                             <!-- <li><a href="week9/inclass-time.html">Temporal Controller</a></li>
                             <li><a href="week9/inclass-3d.html">3D Maps in QGIS</a></li>
                             <li><a href="week9/inclass-data-plotly.html">Data Plotly</a></li> -->
@@ -392,11 +392,23 @@
                     </section>
                 </section>
 
-                <!-- <section>
-                    <h3>Week 12: Special Topics</h3>
+                <section>
+                    <h3>Week 12: R and QGIS workflow</h3>
                     <section class="slides">
                         <h4>
                             <a href="week12/index.html">slides</a>
+                        </h4>
+                        <h4>
+                            <a href="week12/class12.zip">data</a>
+                        </h4>
+                        <ol class="inclass-list">
+                            <li><a href="https://rpubs.com/DUE-methods1/r-qgis">Intro to R</a></li>
+                            <li><a href="week12/inclass-geocoding.html">Geocoding</a></li>
+                        </ol>
+                    </section>
+                    <section class="assignment">
+                        <h4>
+                            <a href="week12/assignment.html">assignment</a>
                         </h4>
                     </section>
                 </section>
@@ -420,7 +432,7 @@
                 </section>
 
                 
-            </section>  -->
+            </section> 
 
             <footer>
                 <p>Background via <a href="https://www.instagram.com/p/8dPYA4idsS/">the.jefferson.grid</a></p>
