--- a/week11/assignment.html
+++ b/week11/assignment.html
@@ -13,7 +13,7 @@
         </header>
 
         <section>
-            <h2>Create a basemap in Mapbox</h2>
+            <h2>Part 1. Create a basemap in Mapbox</h2>
             <p>Create a basemap in <a href="https://www.mapbox.com/">Mapbox</a> Studio and add it to a map in Carto. Use one of the built-in styles to start with but customize the styles in some way that is fitting for your map. Give some thought to the way your data will interact with the basemap and consider uploading some portion of your data to Mapbox to include in the basemap. Also think about how the data appears at various zoom levels.</p>
             <p>Include links to your data sources, a meaningful title, and useful popups as necessary in your Carto map.</p>
         </section>
@@ -22,6 +22,11 @@
             <h2>Submitting your work</h2>
             <p>Submit a link to your Carto map and a short description of what you customized on your basemap.</p>
         </section>
+        <section>
+                <h2>Part 2: R and R Studio prep</h2>
+                <p>Next week we'll be working with R and R Studio to work with data and define a workflow between R and QGIS. To prepare, <a href="https://rstudio-education.github.io/hopr/starting.html">install R and R Studio Desktop</a>. If they are already installed on your computer, update to the latest version.</p>
+                <h2>&nbsp;</h2>
+            </section>
 
         <footer>
             <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Methods 3</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ebrelsford.github.io/" property="cc:attributionName" rel="cc:attributionURL">Eric Brelsford</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
