adding week 12 lesson and assignments

--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
                         <h4>
                             <a href="week12/class12.zip">data</a>
                         </h4>
+                    </section>
+                     <section class="lab">
+                        <h4>in-class work:</h4>
                         <ol class="inclass-list">
                             <li><a href="https://rpubs.com/DUE-methods1/r-qgis">Intro to R</a></li>
                             <li><a href="week12/inclass-geocoding.html">Geocoding</a></li>
